feat: add entities fix: update pom and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=JavaSprint4_2CRUDLevel3MongoDB
+
+# MongoDB connection URL
+spring.data.mongodb.uri=mongodb://localhost:27017/order_system
